--- a/src/styles/win/win.css
+++ b/src/styles/win/win.css
@@ -1,6 +1,14 @@
-.win {
-  font-size: 44px;
-  color: white;
-  opacity: 0.2;
+.won_btn {
+  border: none;
+  background-color: white;
+  height: 144px;
+  width: 290px;
+  cursor: pointer;
+  border-radius: 20%;
+}
+
+.p_style {
+  background-color: aqua;
+  height: 100px;
 }
 /*# sourceMappingURL=win.css.map */
