--- a/src/styles/win/win.scss
+++ b/src/styles/win/win.scss
@@ -1,5 +1,18 @@
-.win{
-    font-size: 44px;
-    color: white;
-    opacity: 0.2;
+.win {
+  //   font-size: 190px;
+  //   color: white;
+  //   opacity: 0.2;
+  //   background-color: aqua;
+}
+.won_btn {
+  border: none;
+  background-color: white;
+  height: 144px;
+  width: 290px;
+  cursor: pointer;
+  border-radius: 20%;
+}
+.p_style {
+  background-color: aqua;
+  height: 100px;
 }
